[b]Version 0.6.3[/b]:

(2008-08-20)
 * Moved the eq2 filter before the screenshot filter, otherwise the 
   screenshots are not affected by the settings in the video equalizer.
   Obviously this requires the software equalizer (eq2) to be enabled.
   This should fix bug #2062425.

(2008-08-19)
 * Added two new functions for the mouse buttons: increase volume and 
   decrease volume. Closes feature request #2055061.

(2008-08-18)
 * Renamed Video->Aspect ratio->None to Video->Aspect ratio->Disabled and
   Video->Aspect ratio->Autodetect to Video->Aspect ratio->Auto.

(2008-08-17)
 * Added a new (experimental) option: Video->Aspect ratio->None. When this 
   option is selected the video will be stretched to fill all the available 
   space, not keeping the aspect ratio.
   Note: this option does NOT work properly if using x11 as video driver.

(2008-08-16)
 * Added m2ts to the list of extensions for video.


[b]Version 0.6.2[/b]:

(2008-08-13)
 * (Linux) The SSA/ASS library is enabled by default.

(2008-08-12)
 * Added the document Configuring_the_toolbars.txt.
 * Added the new option Tips in the Help menu. It just opens a web browser
   to http://smplayer.wiki.sourceforge.net/Tips.

(2008-08-11)
 * Bugfix: the volume slider appeared in the mini gui even if it had been
   removed from the config file.

(2008-08-09)
 * As it seems many people don't understand (and even send bug reports without
   reading the online help) the new meaning of the font scale options in 
   Preferences->Subtitles, those two options have been hidden. 
   (They can be made visible again changing the value of the new config 
   option show_font_scale_options_in_preferences).

(2008-08-07)
 * Added a time display to the floating control in the minigui.
 * The playlist and the volume slider don't send mouse events to their
   parents. Should fix bugs #1993291 and #2020003.
 * Avoid to resize the main window to the default size (400x300) when 
   playing an audio file.

(2008-08-06)